--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/faker": "^4.1.8",
     "@types/jest": "^24.0.25",
@@ -44,6 +43,7 @@
   },
   "devDependencies": {
     "express": "^4.17.1",
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "jest-dom": "^4.0.0"
   }
 }
