--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "adviqo",
+  "homepage": "http://alighali85.github.io/advisors-lounge",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +12,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
